@startuml

title __ARTIFACTS's Class Diagram__\n

  namespace com.olexyn.ensync {
    namespace artifacts {
      class com.olexyn.ensync.artifacts.SyncDirectory {
          + listCreated : Map<String, SyncFile>
          + listDeleted : Map<String, SyncFile>
          + listModified : Map<String, SyncFile>
          + path : String
          - flowState : String
          + SyncDirectory()
          + doCreate()
          + doDelete()
          + doModify()
          + makeListCreated()
          + makeListDeleted()
          + makeListModified()
          + readFreshState()
          + readStateFile()
          + writeStateFile()
          - copyModifDate()
          - deleteFile()
          - makeParentChain()
          - writeFile()
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace artifacts {
      class com.olexyn.ensync.artifacts.SyncDirectory.Info {
          - otherFilePath : String
          - otherParentFile : File
          - otherParentPath : String
          - thisFilePath : String
          - Info()
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace artifacts {
      class com.olexyn.ensync.artifacts.SyncFile {
          + relativePath : String
          + timeModifiedFromStateFile : long
          + SyncFile()
          + getTimeModified()
          + getTimeModifiedFromStateFile()
          + setTimeModifiedFromStateFile()
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace artifacts {
      class com.olexyn.ensync.artifacts.SyncMap {
          + name : String
          + syncDirectories : Map<String, SyncDirectory>
          + SyncMap()
          + addDirectory()
          + removeDirectory()
      }
    }
  }
  

  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.Tools : tools
  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.Execute : x
  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.artifacts.SyncMap : syncMap
  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.artifacts.SyncDirectory : thisSD
  com.olexyn.ensync.artifacts.SyncDirectory +-down- com.olexyn.ensync.artifacts.SyncDirectory.Info
  com.olexyn.ensync.artifacts.SyncFile -up-|> java.io.File
  com.olexyn.ensync.artifacts.SyncFile o-- com.olexyn.ensync.artifacts.SyncDirectory : sd
  com.olexyn.ensync.artifacts.SyncMap o-- com.olexyn.ensync.Tools : tools


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
